--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -28,7 +28,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <base href="/" />
-    <title>React App</title>
+    <title>MealCore</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
